--- a/HW06.ipynb
+++ b/HW06.ipynb
@@ -21,48 +21,18 @@
         "colab_type": "text"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/charlieLehman/mlmath/blob/master/HW06.ipynb)"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "K6z-GGplaF4p",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 127
-        },
-        "outputId": "dcf56ec8-ef51-48e5-a2d0-22dcc58e8cb8"
-      },
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
-      ],
-      "execution_count": 182,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
-          ],
-          "name": "stdout"
-        }
+        "[View in Colaboratory](https://colab.research.google.com/github/charlieLehman/mlmath/blob/master/HW06.ipynb)"
       ]
     },
     {
       "metadata": {
         "id": "Q9hIh4cuakYq",
         "colab_type": "code",
+        "outputId": "e29a4921-25ca-4588-f8c4-e144a865e5a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        },
-        "outputId": "e29a4921-25ca-4588-f8c4-e144a865e5a8"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -94,7 +64,7 @@
         "    rv +=  [r'\\end{bmatrix}']\n",
         "    return '\\n'.join(rv)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -136,11 +106,11 @@
       "metadata": {
         "id": "S4BUH8xfcMJy",
         "colab_type": "code",
+        "outputId": "8204ff70-5a6c-461f-9a43-73c283e87b76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 370
-        },
-        "outputId": "8204ff70-5a6c-461f-9a43-73c283e87b76"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -164,7 +134,7 @@
         "    display(Math(r\"(a)\\; \\boldsymbol{} = {}\".format(\"{Q}\",bmatrix(q))))\n",
         "    display(Math(r\"(b)\\; \\boldsymbol{} = {}\".format(\"{R}\", bmatrix(r))))\n"
       ],
-      "execution_count": 292,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -421,11 +391,11 @@
       "metadata": {
         "id": "t-0VdmWl8V_1",
         "colab_type": "code",
+        "outputId": "355494d8-930b-48e3-ed66-fe36aec05293",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
-        },
-        "outputId": "355494d8-930b-48e3-ed66-fe36aec05293"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -438,7 +408,7 @@
         "javascript(url=url)\n",
         "display(Math(r\"x_\\star = {}\".format(bmatrix(x_star))))"
       ],
-      "execution_count": 134,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -517,11 +487,11 @@
       "metadata": {
         "id": "_33YhzlsxTKP",
         "colab_type": "code",
+        "outputId": "d41afd1c-f003-4c5a-9e78-dac5ab9df523",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        },
-        "outputId": "d41afd1c-f003-4c5a-9e78-dac5ab9df523"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -537,7 +507,7 @@
         "ax.quiver(*x_star, vs[0,:], vs[1,:], scale=1, scale_units='xy', units='xy')\n",
         "ax.set_aspect('equal')\n"
       ],
-      "execution_count": 112,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -577,11 +547,11 @@
       "metadata": {
         "id": "_f_wuw4z2bJC",
         "colab_type": "code",
+        "outputId": "a67a5b4a-7760-4be2-e42b-a4f4ad1ca942",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        },
-        "outputId": "a67a5b4a-7760-4be2-e42b-a4f4ad1ca942"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -603,7 +573,7 @@
         "fig.suptitle('Gradient Descent v1')\n",
         "    \n"
       ],
-      "execution_count": 180,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,11 +655,11 @@
       "metadata": {
         "id": "xqXiKr7YbG3V",
         "colab_type": "code",
+        "outputId": "0bc6b2c1-7feb-44c1-be6c-1850fc766db3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 399
-        },
-        "outputId": "0bc6b2c1-7feb-44c1-be6c-1850fc766db3"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -762,7 +732,7 @@
         "plt.title('Comparison of Error between \\nSteepest Descent and Conjugate Gradient')\n",
         "plt.show()\n"
       ],
-      "execution_count": 284,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
