--- a/HW06.ipynb
+++ b/HW06.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "HW06.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,14 +15,54 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "[View in Colaboratory](https://colab.research.google.com/github/charlieLehman/mlmath/blob/master/HW06.ipynb)"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "K6z-GGplaF4p",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 127
+        },
+        "outputId": "dcf56ec8-ef51-48e5-a2d0-22dcc58e8cb8"
+      },
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "metadata": {
         "id": "Q9hIh4cuakYq",
         "colab_type": "code",
-        "outputId": "e29a4921-25ca-4588-f8c4-e144a865e5a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "outputId": "e29a4921-25ca-4588-f8c4-e144a865e5a8"
       },
       "cell_type": "code",
       "source": [
@@ -53,7 +94,7 @@
         "    rv +=  [r'\\end{bmatrix}']\n",
         "    return '\\n'.join(rv)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -83,6 +124,16 @@
     },
     {
       "metadata": {
+        "id": "m1AAFR2lOAJ_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "This week was the closing of the Linear Algebra portion of the course, which was focused on the Numeric Methods for solving Least Squares.  The Steepest Descent Algorithm and Conjugate Gradients is motivted by the increasing difficulty to effeciently solve larger and larger sets of data.  By solving a quadratic system $\\boldsymbol{A}^T\\boldsymbol{A}\\boldsymbol{x} = \\boldsymbol{H}\\boldsymbol{x} = \\boldsymbol{A}\\boldsymbol{y} = \\boldsymbol{b} $  the resulting optimization program $\\underset{x \\in \\mathbb{R}^N}{\\text{minimize}} \\frac{1}{2} \\boldsymbol{x}^T\\boldsymbol{H}\\boldsymbol{x} - \\boldsymbol{x}^T\\boldsymbol{b}$ is convex and can be solved by iterative procudure that involves picking a direction and magnitude given a position.  Of the two methods reviewed, Conjugate Gradients is the most interesting.  By intelligently choosing directions by maintaining orthogonality to the previous directions it is able to find a solution in a number of steps the same as the dimensionality of the data.  The relation to Gram-Schmidt was surprising and is worth further study.  A particular aspect of these methods that can affect performance is their sensitivity to the condition number of $\\boldsymbol{H}$.  This class of techniques is widely applied across many fields.  It is the go-to method when inversion is not feasible.\n"
+      ]
+    },
+    {
+      "metadata": {
         "id": "yjeLfo5ycK_J",
         "colab_type": "text"
       },
@@ -95,11 +146,11 @@
       "metadata": {
         "id": "S4BUH8xfcMJy",
         "colab_type": "code",
-        "outputId": "8204ff70-5a6c-461f-9a43-73c283e87b76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 370
-        }
+        },
+        "outputId": "8204ff70-5a6c-461f-9a43-73c283e87b76"
       },
       "cell_type": "code",
       "source": [
@@ -123,7 +174,7 @@
         "    display(Math(r\"(a)\\; \\boldsymbol{} = {}\".format(\"{Q}\",bmatrix(q))))\n",
         "    display(Math(r\"(b)\\; \\boldsymbol{} = {}\".format(\"{R}\", bmatrix(r))))\n"
       ],
-      "execution_count": 0,
+      "execution_count": 292,
       "outputs": [
         {
           "output_type": "display_data",
@@ -380,11 +431,11 @@
       "metadata": {
         "id": "t-0VdmWl8V_1",
         "colab_type": "code",
-        "outputId": "355494d8-930b-48e3-ed66-fe36aec05293",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
-        }
+        },
+        "outputId": "355494d8-930b-48e3-ed66-fe36aec05293"
       },
       "cell_type": "code",
       "source": [
@@ -397,7 +448,7 @@
         "javascript(url=url)\n",
         "display(Math(r\"x_\\star = {}\".format(bmatrix(x_star))))"
       ],
-      "execution_count": 0,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "display_data",
@@ -476,11 +527,11 @@
       "metadata": {
         "id": "_33YhzlsxTKP",
         "colab_type": "code",
-        "outputId": "d41afd1c-f003-4c5a-9e78-dac5ab9df523",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "outputId": "d41afd1c-f003-4c5a-9e78-dac5ab9df523"
       },
       "cell_type": "code",
       "source": [
@@ -496,7 +547,7 @@
         "ax.quiver(*x_star, vs[0,:], vs[1,:], scale=1, scale_units='xy', units='xy')\n",
         "ax.set_aspect('equal')\n"
       ],
-      "execution_count": 0,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "display_data",
@@ -536,11 +587,11 @@
       "metadata": {
         "id": "_f_wuw4z2bJC",
         "colab_type": "code",
-        "outputId": "a67a5b4a-7760-4be2-e42b-a4f4ad1ca942",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        }
+        },
+        "outputId": "a67a5b4a-7760-4be2-e42b-a4f4ad1ca942"
       },
       "cell_type": "code",
       "source": [
@@ -562,7 +613,7 @@
         "fig.suptitle('Gradient Descent v1')\n",
         "    \n"
       ],
-      "execution_count": 0,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -644,11 +695,11 @@
       "metadata": {
         "id": "xqXiKr7YbG3V",
         "colab_type": "code",
-        "outputId": "0bc6b2c1-7feb-44c1-be6c-1850fc766db3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 399
-        }
+        },
+        "outputId": "0bc6b2c1-7feb-44c1-be6c-1850fc766db3"
       },
       "cell_type": "code",
       "source": [
@@ -721,7 +772,7 @@
         "plt.title('Comparison of Error between \\nSteepest Descent and Conjugate Gradient')\n",
         "plt.show()\n"
       ],
-      "execution_count": 0,
+      "execution_count": 284,
       "outputs": [
         {
           "output_type": "stream",
