--- a/HW06.ipynb
+++ b/HW06.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "HW06.ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/charlieLehman/mlmath/blob/master/HW06.ipynb)"
-      ]
-    },
     {
       "metadata": {
         "id": "K6z-GGplaF4p",
@@ -58,11 +47,7 @@
       "metadata": {
         "id": "Q9hIh4cuakYq",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "outputId": "e29a4921-25ca-4588-f8c4-e144a865e5a8"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -76,10 +61,8 @@
         "from IPython.display import display, Math, Latex, HTML\n",
         "from google.colab.output._publish import javascript\n",
         "url = \"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/latest.js?config=default\"\n",
-        "\n",
-        "javascript(url=url)\n",
-        "\n",
         "data_path = \"gdrive/My Drive/Colab Notebooks/mlmath_data/hw06p6_data.mat\"\n",
+        "\n",
         "def bmatrix(a):\n",
         "    \"\"\"Returns a LaTeX bmatrix\n",
         "\n",
@@ -94,23 +77,8 @@
         "    rv +=  [r'\\end{bmatrix}']\n",
         "    return '\\n'.join(rv)"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/latest.js?config=default'></script>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
