--- a/mlmath_HW07.ipynb
+++ b/mlmath_HW07.ipynb
@@ -32,7 +32,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Dependencies"
+        "Dependencies"
       ]
     },
     {
@@ -72,7 +72,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Utilities"
+        "Utilities"
       ]
     },
     {
