--- a/HW09.ipynb
+++ b/HW09.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "HW09.ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,13 +14,15 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
+        "id": "8kvJVGzr9EUP",
         "colab_type": "text"
       },
+      "cell_type": "markdown",
       "source": [
-        "<a href=\"https://colab.research.google.com/github/charlieLehman/mlmath/blob/master/HW09.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "HW09 \n",
+        "\n",
+        "Charles Lehman"
       ]
     },
     {
